--- a/public/views/home.html
+++ b/public/views/home.html
@@ -41,22 +41,35 @@
                 <h3>Word Definitions</h3>
                 <p>Here you can find definitions for the words you've added.</p>
                 <div class="table-container">
-                <table class="word-definition-table">
-                    <thead>
-                        <tr>
-                            <th>Word</th>
-                            <th>Definitions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="definitions-tbody">
-                        <!-- Word definitions will be dynamically added here -->
-                    </tbody>
-                </table>
-            </div>
+                    <table class="word-definition-table">
+                        <thead>
+                            <tr>
+                                <th>Word</th>
+                                <th>Definitions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="definitions-tbody">
+                            <!-- Word definitions will be dynamically added here -->
+                        </tbody>
+                    </table>
+                </div>
             </article>
             <article id="sample-sentences" class="menu__item">
-                <h3>Sample Sentences</h3>
+                <h4>Sample Sentences</h4>
                 <p>Create sample sentences for the words you've added to better understand their usage.</p>
+                <div class="table-container">
+                    <table class="word-sentence-table">
+                        <thead>
+                            <tr>
+                                <th>Word</th>
+                                <th>Sample Sentences</th>
+                            </tr>
+                        </thead>
+                        <tbody id="sentences-tbody">
+                            <!-- Sample sentences will be dynamically added here -->
+                        </tbody>
+                    </table>
+                </div>
             </article>
         </section>
         <div class="menu--shadow"></div>
