--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,27 +1,45 @@
+/* General Reset */
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
 body {
+    background-color: #e0f7fa; /* Light blue */
+    font-size: 62.5%;
+    font-family: 'Nunito', Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0e68c; /* Mustard yellow */
+    margin: 0;
+    padding: 0;
 }
 
 .container {
-    width: 800px;
-    height: 600px;
-    background-color: #8b4513; /* Brown */
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    width: 90%;
+    max-width: 480px; /* Adjusted for better responsiveness */
+    background-color: #ffffff; /* White */
+    border-radius: 8px; /* Inspired by the design */
+    padding: 10px 20px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .title {
-    color: #deb887; /* Wood brown */
-    font-size: 36px;
+    color: #00796b; /* Teal */
+    font-size: 2.4em; /* Slightly reduced for better alignment */
+    font-weight: 500;
     margin-bottom: 20px;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .form {
@@ -29,33 +47,63 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 input {
-    width: 80%;
-    margin-bottom: 10px;
-    padding: 10px;
+    padding: 15px;
+    width: 100%;
+    margin-bottom: 20px; /* Increased margin for spacing */
+    border: none;
     border-radius: 5px;
-    border: 1px solid #ccc;
+    font-size: 1.6em; /* Adjusted for readability */
+    background-color: #e8eeef;
+    color: #8a97a0;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+select, button {
+    padding: 12px;
+    width: 100%;
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.6em;
+    background-color: #e8eeef; /* Matching input background */
+    color: #8a97a0;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+button {
+    background-color: #4bc970; /* Bright green */
+    color: #ffffff;
+    transition: background-color 0.3s ease;
+    border-width: 1px 1px 3px;
+}
+
+button:hover {
+    background-color: #3ac162; /* Slightly darker green */
 }
 
 .links {
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
 }
 
 .links a {
-    color: #fff;
+    color: #00796b; /* Teal */
     text-decoration: none;
-    font-size: 14px;
+    font-size: 1.4em;
 }
 
 .links a:hover {
     text-decoration: underline;
 }
 
+/* Responsive Design */
 @media screen and (max-width: 1024px) {
     .container {
         width: 90%;
